2007-10-14  Marko Anastasov  <marko@marko.anastasov.name>

	* gdk/src/pixbuf.hg: Fixed build by correcting a typo for create()
	from previous commit. Bug #486257 (Craig Keogh).

2007-10-12  Armin Burgmeier  <armin@openismus.com>

	* gdk/gdkmmconfig.h.in:
	* gtk/gtkmmconfig.h.in:
	* configure.in: Added G{D,T}KMM_DISABLE_DEPRECATED defines to
	g{d,t}kmmconfig.h so other code can check whether deprecated API is
	available or not.

	* gdk/src/pixbuf.hg:
	* gdk/src/pixbuf.ccg: Fixed build with deprecated API disabled.

	* gtk/src/tooltips.hg:
	* gtk/src/combo.hg:
	* gtk/src/textview.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/inputdialog.hg:
	* gtk/src/treeview.hg:
	* gtk/src/style.hg:
	* gtk/src/toolitem.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/treepath.hg:
	* gtk/src/treesortable.hg:
	* gtk/src/progress.hg:
	* gtk/src/treeviewcolumn.hg:
	* gtk/src/fileselection.hg:
	* gdk/src/colormap.hg:
	* gdk/src/color.hg: Use the new _CONFIGINCLUDE m4 macro in glibmm to
	include gtkmmconfig.h before the #ifdef GTKMM_DISABLE_DEPRECATED at
	the top of the file so that the define is actually present when other
	code includes one of these files directly. Note this requires glibmm
	from SVN to generate the source files (though building the sources
	should still work with 2.14.1).

2.12.1:

2007-10-04  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/printoperation.hg: Add a custom conversion for the 
	signals that use PrintContext, to fix a reference-counting 
	problem that caused crashes when printing or showing a 
	print preview.
	Note that this was removed mistakenly on 2007-07-14
	(appearing in 2.11.4) so gtkmm 2.10 does not have this problem. 

	* tools/m4/convert_atk.m4:
	* tools/m4/convert_gdk.m4:
	* tools/m4/convert_gtk.m4:
	* atk/src/hypertext.hg:
	* atk/src/table.hg:
	* gdk/src/displaymanager.hg:
	* gtk/src/inputdialog.hg:
	* gtk/src/style.hg:
	* gtk/src/textbuffer.hg:
	* gtk/src/widget.hg: Move all signal-specific conversions to 