@@ -2827,5 +2827,23 @@ Since: 2.12
 </function>
 
 
+<function name="gtk_entry_get_text">
+<description>
+Retrieves the contents of the entry widget.
+See also gtk_editable_get_chars().
+
+
+</description>
+<parameters>
+<parameter name="entry">
+<parameter_description> a #GtkEntry
+</parameter_description>
+</parameter>
+</parameters>
+<return>The contents of the entry widget.
+</return>
+</function>
+
+
 
 </root>
