@@ -172,6 +172,7 @@ public:
   Glib::RefPtr<PageSetup> run_page_setup_dialog(Window& parent,
                                                 const Glib::RefPtr<const PageSetup>& page_setup,
                                                 const Glib::RefPtr<const PrintSettings>& print_settings);
+  //TODO: Add overloads that don't take page_setup.
 
   /** For example, 
    * void on_setup_done(const Glib::RefPtr<PageSetup>& page_setup);
