@@ -1,3 +1,10 @@
+This is the trunk branch for gtkmm 2.13/14.
+
+2007-10-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/gtk_docs_override.xml: Corrected the documentation for 
+	Gtk::Entry::get_text().
+
 2007-10-14  Marko Anastasov  <marko@marko.anastasov.name>
 
 	* gdk/src/pixbuf.hg: Fixed build by correcting a typo for create()
